Updated the logic behind key presses so that the animation no longer sticks when a button is held down and released.

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body{
 .key{
     text-align: center;
     background-color: rgba(65, 56, 40, 0.753);
-    border: 3px solid black;
+    border: 3px solid rgb(0, 0, 0);
     border-radius: 6px;
     width: 65px;
     height: 65px;
@@ -31,13 +31,13 @@ body{
 
 .pressed{
     transform: scale(1.4);
-    border-color: yellow;
-    box-shadow: 0 0 10px yellow;
+    border-color: rgb(255, 255, 0);
+    box-shadow: 0 0 10px rgb(255, 255, 0);
 }
 
 kbd{
     font-size: 32px;
-    color: white;
+    color: rgb(255, 255, 255);
 }
 
 .sound{
